package com.goutham.blog.spring_boot_strategy_dp.after.parser;

import java.io.File;

public interface FileParser {
    void parse(File file);
}
